docs: :memo: little fixes

--- a/k8s-rs-pb/Cargo.toml
+++ b/k8s-rs-pb/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "k8s-rs-pb"
-version = "0.1.1"
+version = "0.1.2"
 authors = ["Dmitriy Mastitskiy <dimulgator@outlook.com>"]
 edition = "2021"
 license = "MIT"
 homepage = "https://github.com/DMoscicki/k8s-rs-pb/"
 repository = "https://github.com/DMoscicki/k8s-rs-pb/"
 documentation = "https://github.com/DMoscicki/k8s-rs-pb/blob/master/README.md"
-description = "Converted from k8s-openapi to rust-protobuf"
+description = "Converter from k8s-openapi to rust-protobuf"
 publish = true
 
 [dependencies]
