--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -60,9 +60,8 @@ jobs:
             run: |-
               cargo release \
                 publish \
-                --workspace \
-                --all-features \
-                --allow-branch HEAD \
+                --package \
+                k8s-rs-pb \
                 --no-confirm \
                 --execute
               cargo logout
