--- a/.github/workflows/unit_codegen.yml
+++ b/.github/workflows/unit_codegen.yml
@@ -6,6 +6,8 @@ name: UNIT
 on:
   pull_request:
     branches: [ "master" ]
+  merge_group:
+    types: [checks_requested]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
