--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,7 +21,10 @@ jobs:
       - uses: arduino/setup-protoc@v3
       - name: install fd, sd
         run: |
-          sudo apt-get install -y sd fd-find
+          sudo apt-get install -y sd
+          export FD_VER=10.2.0
+          curl -sSL "https://github.com/sharkdp/fd/releases/download/v${FD_VER}/fd-v${FD_VER}-x86_64-unknown-linux-musl.tar.gz" \
+            | tar xz --strip-components=1 -C /usr/local/bin/
       - uses: dtolnay/rust-toolchain@stable
       - uses: Swatinem/rust-cache@v2
       - run: just protos
