--- a/k8s-rs-pb/Cargo.toml
+++ b/k8s-rs-pb/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "k8s-rs-pb"
-version = "0.1.9"
+version = "0.2.0"
 authors = ["Dmitriy Mastitskiy <dimulgator@outlook.com>"]
 edition = "2021"
 license = "MIT"
@@ -12,7 +12,10 @@ publish = true
 
 [dependencies]
 protobuf = "3.7.2"
-serde = {version="1.0.215", features = ["derive"]}
-serde_json = "1.0.133"
+serde = {version="1.0", features = ["derive"]}
+serde_json = "1.0"  
 chrono = "0.4.38"
 k8s-openapi = { version = "0.24.0", features = ["latest"] }
+
+[dev-dependencies]
+kube = {version = "0.99.0", features = ["client"]}
