--- a/k8s-rs-pb/Cargo.toml
+++ b/k8s-rs-pb/Cargo.toml
@@ -12,14 +12,15 @@ description = "Bindings from k8s-openapi to rust-protobuf which support applicat
 publish = true
 
 [dependencies]
+cfg-if = "1"
 protobuf = "3.7.2"
 serde = {version="1.0", features = ["derive"]}
 serde_json = "1.0"  
-chrono = "0.4.38"
-k8s-openapi = { version = "0.24.0", features = ["latest"] }
+chrono = "0.4"
 
 [dev-dependencies]
 kube = {version = "0.99.0", features = ["client"]}
+k8s-openapi = { version = "0.24.0", features = ["latest"] }
 
 [features]
 earliest = ["v1_30"]
