chore: change categories

--- a/k8s-rs-pb/Cargo.toml
+++ b/k8s-rs-pb/Cargo.toml
@@ -3,7 +3,7 @@ name = "k8s-rs-pb"
 version = "0.3.0"
 authors = ["Dmitriy Mastitskiy <dimulgator@outlook.com>"]
 edition = "2021"
-categories = ["api-bindings", "kubernetes", "k8s", "web"]
+categories = ["api-bindings", "web-programming::http-client", "parsing"]
 license = "MIT"
 homepage = "https://github.com/DMoscicki/k8s-rs-pb/"
 repository = "https://github.com/DMoscicki/k8s-rs-pb/"
