--- a/k8s-rs-pb/Cargo.toml
+++ b/k8s-rs-pb/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "k8s-rs-pb"
-version = "0.3.0"
+version = "0.4.0"
 authors = ["Dmitriy Mastitskiy <dimulgator@outlook.com>"]
 edition = "2021"
 categories = ["api-bindings", "web-programming::http-client", "parsing"]
-license = "MIT"
+license = "Apache-2.0"
 homepage = "https://github.com/DMoscicki/k8s-rs-pb/"
 repository = "https://github.com/DMoscicki/k8s-rs-pb/"
-documentation = "https://github.com/DMoscicki/k8s-rs-pb/blob/v0.3.0/README.md"
+documentation = "https://github.com/DMoscicki/k8s-rs-pb/blob/v0.4.0/README.md"
 description = "Bindings from k8s-openapi to rust-protobuf which support application/vnd.kubernetes.protobuf"
 publish = true
 
@@ -19,8 +19,8 @@ serde_json = "1.0"
 chrono = "0.4"
 
 [dev-dependencies]
-kube = {version = "0.99.0", features = ["client"]}
-k8s-openapi = { version = "0.24.0", features = ["latest"] }
+kube = {version = "1.0.0", features = ["client"]}
+k8s-openapi = { version = "0.25.0", features = ["latest"] }
 
 [features]
 earliest = ["v1_30"]
